# docs/swagger.yaml
@@ -3,33 +3,28 @@ definitions:
   models.Attendance:
     properties:
       checked_in_at:
-        example: "2023-01-01T09:15:00Z"
         type: string
       created_at:
-        example: "2023-01-01T00:00:00Z"
         type: string
       email:
-        example: student@example.com
         type: string
       id:
-        example: 1
         type: integer
       phone:
-        example: "0123456789"
         type: string
       session:
-        $ref: '#/definitions/models.AttendanceSession'
+        allOf:
+        - $ref: '#/definitions/models.AttendanceSession'
+        description: Relationships
       session_id:
-        example: 1
         type: integer
       student_name:
-        example: Nguyen Van A
+        type: string
+      updated_at:
         type: string
       work_unit:
-        example: Phong IT
         type: string
       work_unit_address:
-        example: 123 Nguyen Trai, Q1, HCM
         type: string
     type: object
   models.AttendanceSession:
@@ -41,49 +36,128 @@ definitions:
       class:
         $ref: '#/definitions/models.Class'
       class_id:
-        example: 1
         type: integer
       created_at:
-        example: "2023-01-01T00:00:00Z"
         type: string
+      event:
+        allOf:
+        - $ref: '#/definitions/models.Event'
+        description: Relationships
+      event_id:
+        type: integer
       id:
-        example: 1
         type: integer
       session_date:
-        example: "2023-01-01T09:00:00Z"
         type: string
       teacher:
         $ref: '#/definitions/models.Teacher'
       teacher_id:
-        example: 1
         type: integer
+      updated_at:
+        type: string
     type: object
   models.Class:
     properties:
       class_code:
-        example: IT001
         type: string
       class_name:
-        example: Lap trinh Web
         type: string
       created_at:
-        example: "2023-01-01T00:00:00Z"
         type: string
       id:
-        example: 1
         type: integer
+      sessions:
+        items:
+          $ref: '#/definitions/models.AttendanceSession'
+        type: array
       students:
+        description: Relationships
         items:
           $ref: '#/definitions/models.Student'
         type: array
+      updated_at:
+        type: string
+    type: object
+  models.CreateAttendanceRequest:
+    properties:
+      email:
+        example: student@example.com
+        type: string
+      phone:
+        example: "0123456789"
+        type: string
+      session_id:
+        example: 1
+        type: integer
+      student_name:
+        example: Nguyen Van A
+        type: string
+      work_unit:
+        example: Công ty ABC
+        type: string
+      work_unit_address:
+        example: 123 Đường ABC, Quận 1, TP.HCM
+        type: string
+    required:
+    - email
+    - phone
+    - session_id
+    - student_name
+    - work_unit
+    - work_unit_address
+    type: object
+  models.CreateAttendanceSessionRequest:
+    properties:
+      class_id:
+        example: 1
+        type: integer
+      event_id:
+        example: 1
+        type: integer
+      session_date:
+        example: "2025-08-20T08:31:46.121Z"
+        type: string
+      teacher_id:
+        example: "1"
+        type: string
+    type: object
+  models.CreateClassRequest:
+    properties:
+      class_code:
+        example: LOP001
+        type: string
+      class_name:
+        example: Lớp Khoa học máy tính K65
+        type: string
+    required:
+    - class_code
+    - class_name
+    type: object
+  models.CreateEventRequest:
+    properties:
+      description:
+        example: Workshop về trí tuệ nhân tạo
+        type: string
+      event_name:
+        example: Workshop AI
+        type: string
+      start_date:
+        example: "2023-01-01T00:00:00Z"
+        type: string
     type: object
   models.CreateStudentRequest:
     properties:
       class_id:
         example: 1
         type: integer
+      date_of_birth:
+        example: "2000-01-01T00:00:00Z"
+        type: string
       email:
         example: user@example.com
+        type: string
+      phone:
+        example: "0123456789"
         type: string
       student_code:
         example: SV001
@@ -91,61 +165,102 @@ definitions:
       student_name:
         example: Nguyen Van A
         type: string
+      work_unit:
+        example: Công ty ABC
+        type: string
     type: object
   models.CreateTeacherRequest:
     properties:
+      date_of_birth:
+        example: "1980-01-01T00:00:00Z"
+        type: string
+      email:
+        example: teacher@example.com
+        type: string
+      phone:
+        example: "0123456789"
+        type: string
       teacher_code:
         example: GV001
         type: string
       teacher_name:
         example: Nguyen Thi B
+        type: string
+      work_unit:
+        example: Trường Đại học ABC
+        type: string
+    type: object
+  models.Event:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      event_name:
+        type: string
+      id:
+        type: integer
+      sessions:
+        description: Relationships
+        items:
+          $ref: '#/definitions/models.AttendanceSession'
+        type: array
+      start_date:
+        type: string
+      updated_at:
         type: string
     type: object
   models.Student:
     properties:
       class:
-        $ref: '#/definitions/models.Class'
+        allOf:
+        - $ref: '#/definitions/models.Class'
+        description: Relationships
       class_id:
-        example: 1
         type: integer
       created_at:
-        example: "2023-01-01T00:00:00Z"
         type: string
       date_of_birth:
-        example: "2000-01-01T00:00:00Z"
         type: string
       email:
-        example: student@example.com
         type: string
       id:
-        example: 1
         type: integer
       phone:
-        example: "0123456789"
-        type: string
-      school_name:
-        example: Dai hoc Bach Khoa
         type: string
       student_code:
-        example: SV001
         type: string
       student_name:
-        example: Nguyen Van A
+        type: string
+      updated_at:
+        type: string
+      work_unit:
         type: string
     type: object
   models.Teacher:
     properties:
       created_at:
-        example: "2023-01-01T00:00:00Z"
+        type: string
+      date_of_birth:
+        type: string
+      email:
         type: string
       id:
-        example: 1
         type: integer
+      phone:
+        type: string
+      sessions:
+        description: Relationships
+        items:
+          $ref: '#/definitions/models.AttendanceSession'
+        type: array
       teacher_code:
-        example: GV001
         type: string
       teacher_name:
-        example: Nguyen Thi B
+        type: string
+      updated_at:
+        type: string
+      work_unit:
         type: string
     type: object
 host: localhost:8080
@@ -165,6 +280,11 @@ paths:
   /attendance-sessions:
     get:
       description: Get all attendance sessions with class and teacher information
+      parameters:
+      - description: Filter by Event ID
+        in: query
+        name: event_id
+        type: integer
       produces:
       - application/json
       responses:
@@ -180,6 +300,37 @@ paths:
             additionalProperties: true
             type: object
       summary: Get all attendance sessions
+      tags:
+      - attendance-sessions
+    post:
+      consumes:
+      - application/json
+      description: Create a new attendance session in the database
+      parameters:
+      - description: Attendance session data
+        in: body
+        name: session
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateAttendanceSessionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.AttendanceSession'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Create a new attendance session
       tags:
       - attendance-sessions
   /attendance-sessions/{id}:
@@ -234,6 +385,37 @@ paths:
             additionalProperties: true
             type: object
       summary: Get all attendances
+      tags:
+      - attendances
+    post:
+      consumes:
+      - application/json
+      description: Create a new attendance record
+      parameters:
+      - description: Attendance data
+        in: body
+        name: attendance
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateAttendanceRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Attendance'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Create a new attendance
       tags:
       - attendances
   /attendances/{id}:
@@ -300,7 +482,7 @@ paths:
         name: class
         required: true
         schema:
-          $ref: '#/definitions/models.Class'
+          $ref: '#/definitions/models.CreateClassRequest'
       produces:
       - application/json
       responses:
@@ -355,6 +537,209 @@ paths:
       summary: Get class by ID
       tags:
       - classes
+  /events:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of all events
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get all events
+      tags:
+      - events
+    post:
+      consumes:
+      - application/json
+      description: Create a new event with the provided information
+      parameters:
+      - description: Event data
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateEventRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Create a new event
+      tags:
+      - events
+  /events/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an event by its ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Delete an event
+      tags:
+      - events
+    get:
+      consumes:
+      - application/json
+      description: Get a single event by its ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get event by ID
+      tags:
+      - events
+    put:
+      consumes:
+      - application/json
+      description: Update an existing event with the provided information
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Event data
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateEventRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Update an event
+      tags:
+      - events
+  /events/{id}/attendances:
+    get:
+      responses: {}
+  /events/{id}/sessions:
+    get:
+      consumes:
+      - application/json
+      description: Get a single event by its ID including all attendance sessions
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get event with sessions
+      tags:
+      - events
   /health:
     get:
       consumes:
